update font awesome

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
                             <li>Apache Cordova</li>
                             <li>Vue.js</li>
                             <li>Bootstrap</li>
+                            <li>Materialize.css</li>
                             <li>Bulma</li>
                             <li>Buefy.js</li>
                             <li>Adobe XD</li>
@@ -393,48 +394,52 @@
                     <li class="mb-2">
                         <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
-                ></span>Mealdoc: Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
+                ></span>Mealdoc &#183; Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
                     </a>
                     </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
-                ></span>Spark API: Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
+                ></span>Apache Spark &#183; Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <!-- <li class="mb-2">
                         <a href="https://github.com/gasci/bike-count-prediction" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit learn &#183; Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/spanish-power-price-prediction" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Prediction of Spanish power market daily prices&nbsp;
-                            <i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit learn/XGBoost &#183; Prediction of Spanish power market daily prices&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="https://github.com/gasci/nhs-food-spark" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; NHS Food Dataset Ingredient Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li> -->
                     <li class="mb-2">
                         <a href="https://github.com/gasci/simple-eda-titanic" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
-                ></span>Simple Exploratory Data Analysis of Determinants of Survival in the Wreck of the Titanic &nbsp;<i class="fas fa-link"></i>
+                ></span>Pandas &#183; Simple Exploratory Data Analysis of Determinants of Survival in the Wreck of the Titanic &nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
-                ></span>Hadoop, Hive: Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
+                ></span>Apache Hadoop, Apache Hive &#183; Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
                         <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
-                ></span>Curiosmo: Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
+                ></span>Curiosmo &#183; Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
                         <a href="http://www.itfnoroloji.org/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
-                ></span>Istanbul University Faculty of Medicine, Neurology Department: Official Website&nbsp;<i class="fas fa-link"></i>
+                ></span>Istanbul University Faculty of Medicine, Neurology Department &#183; Official Website&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     </ul>
@@ -444,7 +449,7 @@
                         <li>
                             <a href="https://www.brainstimjrnl.com/article/S1935-861X(17)30408-4/abstract" target="_blank" class="text-danger">
                                 <span class="fa-li"><i class="fas fa-book text-warning"></i
-                ></span> Transcranial direct current stimulation may enhance decision making in gambling disorder: A preliminary double-blind sham-controlled study&nbsp;<i class="fas fa-link"></i>
+                ></span>Transcranial direct current stimulation may enhance decision making in gambling disorder: A preliminary double-blind sham-controlled study&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </li>
                     </ul>
@@ -658,6 +663,9 @@
                 <p class="mb-0">
                     I like reading and writing poetry. In addition to this, I spend a substantial amount of my free time exploring the latest technology advancements in the health care world.
                 </p>
+                <div class="mt-4">
+                    <i class="fas fa-3x fa-running social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-table-tennis social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-biking social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-pen-alt social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-laptop-medical social"></i>
+                </div>
             </div>
         </section>
         </div>
