--- a/index.html
+++ b/index.html
@@ -164,6 +164,23 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h4 class="mb-0">Medical Intern</h4>
+                        <div class="subheading mb-3">
+                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger text-capitalize">Istanbul University, Faculty of Medicine&nbsp;<i class="fas fa-link"></i></a>
+                        </div>
+                        <ul>
+                            <li>
+                                Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine, Gynaecology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry, Dermatology, Family Medicine, and Algology.</strong>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0 text-right">
+                        <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
+                        <span class="text-primary">June 2019 - July 2020</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h4 class="mb-0">
                             Co-Founder, Product Manager, Front-End Developer
                         </h4>
