--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                             <li>Pandas</li>
                             <li>Matplotlib</li>
                             <li>Seaborn</li>
-                            <li>Scikit learn</li>
+                            <li>Scikit-learn</li>
                             <li>Apache Spark</li>
                             <li>Apache Hadoop</li>
                             <li>Apache HBase</li>
@@ -400,12 +400,12 @@
                     </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/bike-count-prediction" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit learn &#183; Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn &#183; Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <!--li class="mb-2">
                         <a href="https://github.com/gasci/spanish-power-price-prediction" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit learn/XGBoost &#183; Prediction of Spanish power market daily prices&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Prediction of Spanish power market daily prices&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
