--- a/index.html
+++ b/index.html
@@ -404,6 +404,11 @@
                         </a>
                     </li>
                     <li class="mb-2">
+                        <a href="https://github.com/alakise/Cleveland-Heart-Disease-Dataset-Sandbox/blob/main/classification/classification.ipynb" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Predicting the chance of heart attack on Cleveland Heart Disease Dataset&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
                         <a href="https://github.com/gasci/nhs-food-spark" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; NHS Food Dataset Ingredient Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
@@ -411,6 +416,11 @@
                     <!--li class="mb-2">
                         <a href="https://github.com/gasci/spanish-power-price-prediction" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Prediction of Spanish power market daily prices&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="https://gasci.carto.com/builder/ddaee075-2cd9-4149-8f90-a902f90ea239/embed" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Carto &#183; City of Chicago Crime Safety Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li-->
                     <li class="mb-2">
