--- a/index.html
+++ b/index.html
@@ -413,13 +413,13 @@
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; NHS Food Dataset Ingredient Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                    <!--li class="mb-2">
+                    <li class="mb-2">
                         <a href="https://github.com/gasci/spanish-power-price-prediction" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Prediction of Spanish power market daily prices&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                    <li class="mb-2">
-                        <a href="https://gasci.carto.com/builder/ddaee075-2cd9-4149-8f90-a902f90ea239/embed" target="_blank" class="text-danger">
+                    <!--li class="mb-2">
+                        <a href="https://github.com/gasci/carto-chicago-crime" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Carto &#183; City of Chicago Crime Safety Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li-->
