--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@
                     <li class="mb-2">
                         <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Mealdoc &#183; Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized
-                            meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;
-                            <i class="fas fa-link"></i>
+                            meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
@@ -398,24 +397,13 @@
                         </a>
                     </li>
                     <li class="mb-2">
-                        <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;
-                            <i class="fas fa-link"></i>
-                        </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="https://github.com/gasci/bike-count-prediction" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn &#183; Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
-                    <li class="mb-2">
                         <a href="https://github.com/gasci/nhs-food-spark" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; NHS Food Dataset Ingredient Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
-                        <a href="https://github.com/gasci/spanish-power-price-prediction" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Prediction of Spanish power market daily prices&nbsp;<i class="fas fa-link"></i>
+                        <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <!--li class="mb-2">
@@ -423,6 +411,16 @@
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Carto &#183; City of Chicago Crime Safety Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li-->
+                    <li class="mb-2">
+                        <a href="https://github.com/gasci/bike-count-prediction" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn &#183; Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="https://github.com/gasci/spanish-power-price-prediction" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Prediction of Spanish power market daily prices&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/simple-eda-titanic" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Pandas &#183; Simple Exploratory Data Analysis of Determinants of Survival in the Wreck of the Titanic &nbsp;<i class="fas fa-link"></i>
@@ -435,8 +433,7 @@
                     </li>
                     <li class="mb-2">
                         <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183; Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;
-                            <i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183; Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
