--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+                    <a class="nav-link js-scroll-trigger" href="#portfolio">Porfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#awards">Certifications</a>
@@ -378,19 +378,14 @@
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Projects-->
-        <section class="resume-section" id="projects">
+        <!-- Portfolio-->
+        <section class="resume-section" id="portfolio">
             <div class="resume-section-content">
                 <h3 class="mb-5">Projects <i class="fas fa-code text-warning"></i> & Publications <i class="fas fa-book text-warning"></i></h3>
 
-                <h6 class="mt-3">Projects</h6>
+                <h5 class="text-warning">Projects</h5>
+                <h6 class="mt-3">Data Science & Big Data</h6>
                 <ul class="fa-ul mb-0">
-                    <li class="mb-2">
-                        <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Mealdoc &#183; Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized
-                            meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
                     <li class="mb-2">
                         <a href="https://github.com/alakise/Cleveland-Heart-Disease-Dataset-Sandbox/blob/main/classification/classification.ipynb" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Predicting the chance of heart attack on Cleveland Heart Disease Dataset&nbsp;<i class="fas fa-link"></i>
@@ -403,7 +398,9 @@
                     </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;
+                            <i
+                                class="fas fa-link"></i>
                         </a>
                     </li>
                     <!--li class="mb-2">
@@ -431,6 +428,16 @@
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Hadoop, Apache Hive &#183; Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
+                </ul>
+
+                <h6 class="mt-3">Software Development</h6>
+                <ul class="fa-ul mb-0">
+                    <li class="mb-2">
+                        <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Mealdoc &#183; Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized
+                            meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li class="mb-2">
                         <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183; Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
@@ -443,7 +450,7 @@
                     </li>
                 </ul>
 
-                <h6 class="mt-3">Publications</h6>
+                <h5 class="text-warning mt-4">Publications</h5>
                 <ul class="fa-ul mb-0">
                     <li>
                         <a href="https://www.brainstimjrnl.com/article/S1935-861X(17)30408-4/abstract" target="_blank" class="text-danger">
