--- a/index.html
+++ b/index.html
@@ -399,15 +399,14 @@
                     <li class="mb-2">
                         <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Spark &#183; Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;
-                            <i
-                                class="fas fa-link"></i>
+                            <i class="fas fa-link"></i>
                         </a>
                     </li>
-                    <!--li class="mb-2">
+                    <li class="mb-2">
                         <a href="https://github.com/gasci/carto-chicago-crime" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Carto &#183; City of Chicago Crime Safety Analysis&nbsp;<i class="fas fa-link"></i>
                         </a>
-                    </li-->
+                    </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/bike-count-prediction" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn &#183; Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
