--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                         <ul>
                             <li>JavaScript</li>
                             <li>Apache Cordova</li>
+                            <li>Electron</li>
                             <li>Vue.js</li>
                             <li>Bootstrap</li>
                             <li>Materialize.css</li>
