--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am a medical doctor who builds full-stack cross-platform mobile applications. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health
-                    care quality around the world.
+                    I am a medical doctor who develops full-stack cross-platform software. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality
+                    around the world.
                 </p>
                 <div class="social-icons">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
