--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am a medical doctor who develops full-stack cross-platform software. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality
+                    I am a medical doctor who develops full-stack, cross-platform software. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality
                     around the world.
                 </p>
                 <div class="social-icons">
