--- a/index.html
+++ b/index.html
@@ -540,6 +540,11 @@
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.datacamp.com/statement-of-accomplishment/course/8a57d71fda98368c0f3ed34466739ad1a70fc7ef" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Introduction to Deep Learning with Keras&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.datacamp.com/statement-of-accomplishment/course/400c09fdd0c3a9c81aad2c31fe8e3bd3aaa792ae" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Introduction to Deep Learning in Python&nbsp;<i class="fas fa-link"></i>
                         </a>
