--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             </li>
                             <li>Integrated Google Fit and Apple HealthKit APIs.</li>
                             <li>
-                                Launched successful marketing campaigns for customer acquisition using Google Ads and Facebook Ads.
+                                Launched successful marketing campaigns using Google Ads and Facebook Ads attracting 8000 users to the platform.
                             </li>
                             <li>
                                 Built e-mail marketing automations through Mailjet API, Sender.net, and E-mail Octopus.
@@ -539,6 +539,11 @@
 
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
+                    <li>
+                        <a href="https://www.datacamp.com/statement-of-accomplishment/course/d862888e67071f1d87303d24f47871e72adf8168" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Advanced Deep Learning with Keras&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li>
                         <a href="https://www.datacamp.com/statement-of-accomplishment/course/8a57d71fda98368c0f3ed34466739ad1a70fc7ef" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Introduction to Deep Learning with Keras&nbsp;<i class="fas fa-link"></i>
