--- a/index.html
+++ b/index.html
@@ -538,6 +538,11 @@
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.datacamp.com/statement-of-accomplishment/course/f2bbb6c4598b231c848612de3fe7b32c106f616b" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Image Processing with Keras in Python&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.datacamp.com/statement-of-accomplishment/course/d862888e67071f1d87303d24f47871e72adf8168" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Advanced Deep Learning with Keras&nbsp;<i class="fas fa-link"></i>
                         </a>
