--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             </li>
                             <li>Integrated Google Fit and Apple HealthKit APIs.</li>
                             <li>
-                                Launched successful marketing campaigns using Google Ads and Facebook Ads attracting 8000 users to the platform.
+                                Launched marketing campaigns and tracked KPIs using Google Ads and Facebook Ads attracting 8000 users to the platform.
                             </li>
                             <li>
                                 Built e-mail marketing automations through Mailjet API, Sender.net, and E-mail Octopus.
