--- a/index.html
+++ b/index.html
@@ -207,16 +207,16 @@
                             <li>
                                 Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova, jQuery, Bootstrap) and back-end (AWS RDS, AWS S3, Heroku, Django, Django Rest Framework) features of web, iOS and Android applications.
                             </li>
-                            <li>Integrated Google Fit and Apple HealthKit APIs.</li>
+                            <!-- <li>Integrated Google Fit and Apple HealthKit APIs.</li> -->
                             <li>
                                 Launched marketing campaigns and tracked KPIs using Google Ads and Facebook Ads attracting 8000 users to the platform.
                             </li>
-                            <li>
+                            <!-- <li>
                                 Built e-mail marketing automations through Mailjet API, Sender.net, and E-mail Octopus.
                             </li>
                             <li>
                                 Integrated Google Firebase Analytics and Google Firebase Cloud Messaging.
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
