--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                             <li>Python</li>
                             <li>Django</li>
                             <li>Django Rest Framework</li>
-                            <li>AWS S3, RDS</li>
+                            <li>AWS S3, RDS, EC2</li>
                             <li>SQL</li>
                             <li>MongoDB</li>
                         </ul>
@@ -346,6 +346,7 @@
                             <li>Matplotlib</li>
                             <li>Seaborn</li>
                             <li>Scikit-learn</li>
+                            <li>Keras</li>
                             <li>Apache Spark</li>
                             <li>Apache Hadoop</li>
                             <li>Apache HBase</li>
@@ -360,6 +361,7 @@
                         <ul>
                             <li>Heroku</li>
                             <li>Git</li>
+                            <li>Bash</li>
                             <li>Google Firebase Analytics</li>
                             <li>Google Firebase Cloud Messaging</li>
                             <li>Google Ads/Admob/Adsense</li>
