--- a/index.html
+++ b/index.html
@@ -540,6 +540,11 @@
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="datacamp.com/statement-of-accomplishment/course/3eb2e1a272c7bbd35e7818bfe5fd938ee8f1ffff" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Introduction to Natural Language Processing in Python&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.datacamp.com/statement-of-accomplishment/course/f2bbb6c4598b231c848612de3fe7b32c106f616b" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Image Processing with Keras in Python&nbsp;<i class="fas fa-link"></i>
                         </a>
