--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     </li> -->
                     <li>
                         <a href="assets/img/IFMSA_exch.png" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> IFMSA &#183; Molecular Medicine Techniques Used in Medical Laboratories&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> IFMSA &#183; Molecular Medicine Techniques Used in Medical Laboratories&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                 </ul>
