--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                     </li>
                     <li>
                         <a href="https://www.datacamp.com/statement-of-accomplishment/course/654206971dfd5fad14d9cda7ff2c580b5800c144" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Supervised Learning with scikit-learn&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Supervised Learning with Scikit-learn&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
