--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                         <div>
                             <ul>
                                 <li>IE - TEV Joint Full Scholarship</li>
+                                <li>GPA: 3.7/4</li>
                             </ul>
                         </div>
                     </div>
