--- a/index.html
+++ b/index.html
@@ -360,8 +360,9 @@
 
                         <h6 class="mt-3">Product Development</h6>
                         <ul>
-                            <li>Heroku</li>
+                            <li>Scrum</li>
                             <li>Git</li>
+                            <li>Heroku</li>
                             <li>Bash</li>
                             <li>Google Firebase Analytics</li>
                             <li>Google Firebase Cloud Messaging</li>
