--- a/index.html
+++ b/index.html
@@ -542,6 +542,11 @@
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="assets/pdf/scrum_basics.pdf" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> LinkedIn &#183; Scrum: The Basics&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.datacamp.com/statement-of-accomplishment/course/7df35a331533383849c5b7820b1dba1c361f701d" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> DataCamp &#183; Recurrent Neural Networks for Language Modeling in Python&nbsp;<i class="fas fa-link"></i>
                         </a>
