--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Göktuğ Aşcı, MD" />
-    <meta property="og:description" content="I am a medical doctor who builds full-stack cross-platform mobile
+    <meta property="og:description" content="I am a medical doctor and a data scientist who builds full-stack cross-platform mobile
             applications. My passion is to bridge the gap between software
             engineering and medicine; to develop data-driven, inexpensive and
             simple, yet broadly applicable solutions to improve health care
@@ -87,7 +87,7 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am a medical doctor who develops full-stack, cross-platform software. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality
+                    I am a medical doctor and a data scientist who develops full-stack, cross-platform software. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality
                     around the world.
                 </p>
                 <div class="social-icons">
