--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am a medical doctor and a data scientist who develops full-stack, cross-platform software. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality
+                    I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to develop <strong>data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality</strong>
                     around the world.
                 </p>
                 <div class="social-icons">
