--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to develop <strong>data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality</strong>
-                    around the world.
+                    I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to develop <strong>data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality</strong>                    around the world.
                 </p>
                 <div class="social-icons">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
@@ -113,7 +112,6 @@
                                 Big Data&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
-
                         <div>
                             <ul>
                                 <li>IE - TEV Joint Full Scholarship</li>
@@ -451,7 +449,6 @@
                         </a>
                     </li>
                 </ul>
-
                 <h5 class="text-warning mt-4">Publications</h5>
                 <ul class="fa-ul mb-0">
                     <li>
@@ -541,6 +538,11 @@
 
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
+                    <li>
+                        <a href="assets/pdf/agile_foundations.pdf" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> LinkedIn &#183; Agile Foundations&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li>
                         <a href="assets/pdf/scrum_basics.pdf" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> LinkedIn &#183; Scrum: The Basics&nbsp;<i class="fas fa-link"></i>
