--- a/index.html
+++ b/index.html
@@ -201,21 +201,14 @@
                         </div>
                         <ul>
                             <li>
-                                Implemented a content-based recommender system that recommends meal plans to dietitians.
+                                Implemented a content-based recommender system that made it possible to write personalized diet lists in 15 minutes.
                             </li>
                             <li>
-                                Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova, jQuery, Bootstrap) and back-end (AWS RDS, AWS S3, Heroku, Django, Django Rest Framework) features of web, iOS and Android applications.
-                            </li>
-                            <!-- <li>Integrated Google Fit and Apple HealthKit APIs.</li> -->
-                            <li>
-                                Launched marketing campaigns and tracked KPIs using Google Ads and Facebook Ads attracting 8000 users to the platform.
-                            </li>
-                            <!-- <li>
-                                Built e-mail marketing automations through Mailjet API, Sender.net, and E-mail Octopus.
+                                Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance over one codebase for web, iOS, and Android applications.
                             </li>
                             <li>
-                                Integrated Google Firebase Analytics and Google Firebase Cloud Messaging.
-                            </li> -->
+                                Launched marketing campaigns and tracked KPIs using Google Ads and Facebook Ads enabling 8000 users to develop healthy eating habits.
+                            </li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
@@ -232,13 +225,10 @@
                         </div>
                         <ul>
                             <li>
-                                Maintained and analyzed pipeline files using pandas and plotly. (Python)
+                                Created Crunchbase e-mail automations and scraped web speeding up the origination process resulting in the origination of 100+ companies in a few minutes.
                             </li>
                             <li>
-                                Originated 150+ companies and participated in 30+ meetings with new and portfolio companies.
-                            </li>
-                            <li>
-                                Created 2 one-pagers that summarize business models and opportunities of high potential companies for the investment committee.
+                                Arranged 30+ meetings with high-potential companies and created 2 one-pagers that summarize business models and opportunities for the investment committee.
                             </li>
                         </ul>
                     </div>
@@ -275,7 +265,7 @@
                         </div>
                         <ul>
                             <li>
-                                Designed and developed all front-end (Materialize.css, jQuery, Apache Cordova) features of web, iOS, and Android applications.
+                                Designed and developed all front-end (Materialize.css, jQuery, Apache Cordova) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
                             </li>
                         </ul>
                     </div>
@@ -292,9 +282,6 @@
                                 Lab&nbsp;<i class="fas fa-link"></i></a>
                         </div>
                         <ul>
-                            <li>
-                                Participated in daily laboratory activities and weekly meetings.
-                            </li>
                             <li>
                                 Performed 40+ plasmid DNA preparations; bacteria transformations; PCR and real-time PCR, gene cloning and mutagenesis procedures; cell culture and cell transfections and cell lysates for protein-protein interactions assays.
                             </li>
