--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 Implemented a content-based recommender system that made it possible to write personalized diet lists in 15 minutes.
                             </li>
                             <li>
-                                Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance over one codebase for web, iOS, and Android applications.
+                                Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
                             </li>
                             <li>
                                 Launched marketing campaigns and tracked KPIs using Google Ads and Facebook Ads enabling 8000 users to develop healthy eating habits.
@@ -369,7 +369,7 @@
         <!-- Portfolio-->
         <section class="resume-section" id="portfolio">
             <div class="resume-section-content">
-                <h3 class="mb-5">Projects <i class="fas fa-code text-warning"></i> & Publications <i class="fas fa-book text-warning"></i></h3>
+                <h3 class="mb-5"><u>Projects</u> <i class="fas fa-code text-warning"></i> & <u>Publications</u> <i class="fas fa-book text-warning"></i></h3>
 
                 <h5 class="text-warning">Projects</h5>
                 <h6 class="mt-3">Data Science & Big Data</h6>
@@ -451,8 +451,8 @@
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
                 <h3 class="mb-5">
-                    Certifications
-                    <i class="fas fa-certificate text-warning"></i> & Awards <i class="fas fa-trophy text-warning"></i>
+                    <u>Certifications</u>
+                    <i class="fas fa-certificate text-warning"></i> & <u>Awards</u> <i class="fas fa-trophy text-warning"></i>
                 </h3>
 
                 <h6 class="mt-3">Certifications</h6>
@@ -679,7 +679,7 @@
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h3 class="mb-5">Interests</h3>
+                <h3 class="mb-5"><u>Interests</u></h3>
                 <p>
                     Apart from my professional career, I enjoy running, playing table tennis, and biking. I am an avid sprint runner and a city biker.
                 </p>
