--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         </div>
                         <ul>
                             <li>
-                                Created Crunchbase e-mail automations and scraped web speeding up the origination process resulting in the origination of 100+ companies in a few minutes.
+                                Created Crunchbase e-mail automations and developed web scraping scripts enabling origination of 100+ companies in a few minutes.
                             </li>
                             <li>
                                 Arranged 30+ meetings with high-potential companies and created 2 one-pagers that summarize business models and opportunities for the investment committee.
