--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         </div>
                         <ul>
                             <li>
-                                Implemented a content-based recommender system that made it possible to write personalized diet lists in 15 minutes.
+                                Implemented a content-based recommender system that made it possible to write personalized diet lists in less than 15 minutes.
                             </li>
                             <li>
                                 Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
