added poetry section

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                     Apart from my professional career, I enjoy running, playing table tennis, and biking. I am an avid sprint runner and a city biker.
                 </p>
                 <p class="mb-0">
-                    I like reading and writing poetry. In addition to this, I spend a substantial amount of my free time exploring the latest technology advancements in the health care world.
+                    I like reading and writing <a href="siir.html" target="_blank" style="text-decoration:underline">poetry</a>. In addition to this, I spend a substantial amount of my free time exploring the latest technology advancements in the health care world.
                 </p>
                 <div class="mt-4">
                     <i class="fas fa-3x fa-running social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-table-tennis social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-biking social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-pen-alt social"></i>&nbsp;&#183;&nbsp;
