--- a/siir.html
+++ b/siir.html
@@ -28,7 +28,7 @@
         gtag("config", "G-DL79QT8C8M");
     </script>
 
-    <title>Poetry</title>
+    <title>Şiirler</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
