--- a/siir.html
+++ b/siir.html
@@ -85,7 +85,7 @@
     </nav>
     <div class="container">
 
-        <h3 class="mb-5"><u>ŞİİRLER</u>&nbsp;<i class="fas fa-edit text-warning"></i></h3>
+        <h3 class="mb-5"><u>DALGALARA YAZILMIŞ ŞİİRLER</u>&nbsp;<i class="fas fa-edit text-warning"></i></h3>
         <div class="card-columns">
 
             <div class="card shadow-sm">
