--- a/siir.html
+++ b/siir.html
@@ -40,6 +40,11 @@
         body {
             margin: 2rem;
         }
+
+        .card{
+            margin-bottom: 20px !important;
+        }
+
         /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
         
         @media (min-width: 768px) {
@@ -64,7 +69,7 @@
     </style>
 </head>
 
-<body id="page-top">
+<body id="page-top" class="bg-light">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -83,12 +88,12 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container ">
 
-        <h3 class="mb-5"><u>DALGALARA YAZILMIŞ ŞİİRLER</u>&nbsp;<i class="fas fa-edit text-warning"></i></h3>
+        <h3 class="mb-4"><u>DALGALARA YAZILMIŞ ŞİİRLER</u>&nbsp;<i class="fas fa-edit text-warning"></i></h3>
         <div class="card-columns">
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">SIFIR</h4>
                     <p class="card-text">
@@ -97,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">SÖYLESEN</h4>
                     <p class="card-text">tutuşsun kelimeler yanmadan,<br> üşürken ayaklarımız<br> ıslak bir sokakta<br>
@@ -108,7 +113,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">İSTANBUL</h4>
                     <p class="card-text">eski bir hikâyeymiş İstanbul<br> zaman durmuş köprülerinde<br> denizlerine dökülmüş sevgiler<br>
@@ -120,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">TUTULMA</h4>
                     <p class="card-text">
@@ -129,7 +134,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">YAĞMURUN GÖZLERİ</h4>
                     <p class="card-text">
@@ -142,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">KAĞIT KESİĞİ</h4>
                     <p class="card-text">
@@ -157,7 +162,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">CÜMLE</h4>
                     <p class="card-text">
@@ -171,7 +176,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">BOYUNDAN BÜYÜK</h4>
                     <p class="card-text">
@@ -182,7 +187,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">MATEMATİK</h4>
                     <p class="card-text">
@@ -193,7 +198,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">KIZ</h4>
                     <p class="card-text">
@@ -207,7 +212,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">KIRGINLIK</h4>
                     <p class="card-text">
@@ -219,7 +224,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">DOĞUM</h4>
                     <p class="card-text">
@@ -235,7 +240,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">KAYIP I</h4>
                     <p class="card-text">
@@ -246,7 +251,7 @@
                 </div>
             </div>
 
-            <div class="card shadow-sm">
+            <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title">KAYIP II</h4>
                     <p class="card-text">
