--- a/siir.html
+++ b/siir.html
@@ -105,7 +105,7 @@
     <div class="container ">
 
         <h3 class="mb-4"><u>DALGALARA YAZILMIŞ ŞİİRLER</u>&nbsp;<i class="fas fa-edit text-warning"></i></h3>
-        <p>Sisi kaldırmak için herhangi bir şiirin üzerine gel:</p>
+        <p>Sisi kaldırmak için şiire dokun:</p>
         <div class="card-columns">
 
             <div class="card shadow">
