--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         </div>
                         <ul>
                             <li>
-                                Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine, Gynaecology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry, Dermatology, Family Medicine, and Algology.</strong>
+                                Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine, Gynaecology, Neurology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry, Dermatology, Family Medicine, and Algology.</strong>
                             </li>
                         </ul>
                     </div>
