--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
                         <h6>Data Science & Big Data</h6>
                         <ul>
                             <li>Pandas</li>
+                            <li>NumPy</li>
                             <li>Matplotlib</li>
                             <li>Seaborn</li>
                             <li>Scikit-learn</li>
