--- a/siir.html
+++ b/siir.html
@@ -105,7 +105,7 @@
     </nav>
     <div class="container ">
 
-        <h3 class="mb-4"><u>DALGALARA YAZILMIŞ ŞİİRLER</u>&nbsp;<i class="fas fa-edit text-warning"></i></h3>
+        <h4 class="mb-4"><u>DALGALARA YAZILMIŞ ŞİİRLER</u></h4>
         <p>Sisi kaldırmak için herhangi bir dörtgene dokun:</p>
         <div class="card-columns">
 
