--- a/index.html
+++ b/index.html
@@ -439,12 +439,12 @@
                 </ul>
                 <h5 class="text-warning mt-4">Publications</h5>
                 <ul class="fa-ul mb-0">
-                    <li>
+                    <li class="mb-2">
                         <a href="https://link.springer.com/article/10.1007/s00406-018-0948-5" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Effect of transcranial direct current stimulation on decision making and cognitive flexibility in gambling disorder&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                    <li>
+                    <li class="mb-2">
                         <a href="https://www.brainstimjrnl.com/article/S1935-861X(17)30408-4/abstract" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Transcranial direct current stimulation may enhance decision making in gambling disorder: A preliminary double-blind sham-controlled study&nbsp;<i class="fas fa-link"></i>
                         </a>
