--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Academicons -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css"> -->
     <!-- Google fonts-->
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -87,7 +89,9 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to develop <strong>data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality</strong>                    around the world.
+                    I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops
+                    <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to develop <strong>data-driven, inexpensive, and simple yet
+                        broadly applicable solutions to improve health care quality</strong> around the world.
                 </p>
                 <div class="social-icons">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
@@ -96,7 +100,9 @@
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon shadow" href="https://github.com/gasci" target="_blank"><i
                             class="fab fa-github"></i></a>
+                    <!-- <a class="social-icon shadow" href="https://scholar.google.com/citations?user=TxmhXEwAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.5em"></i></a> -->
                 </div>
+
             </div>
         </section>
         <hr class="m-0" />
@@ -241,11 +247,14 @@
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Medical Intern</h4>
                         <div class="subheading mb-3">
-                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger text-capitalize">Istanbul University, Faculty of Medicine&nbsp;<i class="fas fa-link"></i></a>
+                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger text-capitalize">Istanbul University, Faculty of Medicine&nbsp;<i
+                                    class="fas fa-link"></i></a>
                         </div>
                         <ul>
                             <li>
-                                Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine, Gynaecology, Neurology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry, Dermatology, Family Medicine, and Algology.</strong>
+                                Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine,
+                                    Gynaecology, Neurology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry,
+                                    Dermatology, Family Medicine, and Algology.</strong>
                             </li>
                         </ul>
                     </div>
@@ -423,12 +432,14 @@
                     <li class="mb-2">
                         <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Mealdoc &#183; Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized
-                            meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
+                            meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;
+                            <i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
                         <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183; Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183; Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;
+                            <i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
@@ -441,7 +452,8 @@
                 <ul class="fa-ul mb-0">
                     <li class="mb-2">
                         <a href="https://link.springer.com/article/10.1007/s00406-018-0948-5" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Effect of transcranial direct current stimulation on decision making and cognitive flexibility in gambling disorder&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Effect of transcranial direct current stimulation on decision making and cognitive flexibility in gambling disorder&nbsp;
+                            <i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
@@ -690,7 +702,8 @@
                     Apart from my professional career, I enjoy running, playing table tennis, and biking. I am an avid sprint runner and a city biker.
                 </p>
                 <p class="mb-0">
-                    I like reading and writing <a href="siir.html" target="_blank" style="text-decoration:underline">poetry</a>. In addition to this, I spend a substantial amount of my free time exploring the latest technology advancements in the health care world.
+                    I like reading and writing <a href="siir.html" target="_blank" style="text-decoration:underline">poetry</a>. In addition to this, I spend a substantial amount of my free time exploring the latest technology advancements in the health
+                    care world.
                 </p>
                 <div class="mt-4">
                     <i class="fas fa-3x fa-running social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-table-tennis social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-biking social"></i>&nbsp;&#183;&nbsp;<i class="fas fa-3x fa-pen-alt social"></i>&nbsp;&#183;&nbsp;
